--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-native-page-previewer",
   "version": "1.0.0",
@@ -14,5 +13,8 @@
   "license": "",
   "peerDependencies": {
     "react-native": "^0.22.2"
+  },
+  "dependencies": {
+    "cheerio-without-node-native": "^0.20.1"
   }
 }
