--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "0.30.0",
-    "react-native-page-previewer": "github:changey/react-native-page-previewer"
+    "react-native": "0.30.0"
   }
 }
