--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "dependencies": {
     "cheerio-without-node-native": "^0.20.1",
-    "crypto": "0.0.3",
-    "request": "^2.74.0",
+    "request": "2.12.0",
     "url": "^0.11.0"
   }
 }
