--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "cheerio-without-node-native": "^0.20.1",
-    "request": "2.12.0",
-    "url": "^0.11.0"
+    "request": "2.12.0"
   }
 }
