--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-native": "^0.22.2"
   },
   "dependencies": {
-    "cheerio-without-node-native": "^0.20.1",
-    "request": "2.12.0"
+    "cheerio-without-node-native": "^0.20.1"
   }
 }
