--- a/examples/package.json
+++ b/examples/package.json
@@ -8,6 +8,6 @@
   "dependencies": {
     "react": "15.2.1",
     "react-native": "0.30.0",
-    "react-native-page-previewer": "github:changey/react-native-page-previewer"
+    "react-native-page-previewer": "^0.1.0"
   }
 }
