--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "link preview",
     "link-previewer",
     "page-previewer",
-    "oEmbed",
+    "oEmbed"
   ],
   "author": "Eric Chang",
   "license": {
