--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-page-previewer",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   "peerDependencies": {
     "react-native": "^0.22.2"
   },
+  "repository" : "git://github.com/changey/react-native-page-previewer.git",
   "dependencies": {
     "cheerio-without-node-native": "^0.20.1"
   }
